[gd_scene load_steps=4 format=3 uid="uid://melb3n4v47y8"]

[ext_resource type="Script" uid="uid://bmybt1k7fw5ac" path="res://scenes/misc/DeathZone/scripts/deathzone.gd" id="1_nommk"]
[ext_resource type="AudioStream" uid="uid://bccbb4xd8fjx8" path="res://scenes/characters/Player/assets/Tom Screaming Sound Effect (From Tom and Jerry).mp3" id="2_5hsgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nommk"]

[node name="Deathzone" type="Area2D" node_paths=PackedStringArray("sfx_death")]
script = ExtResource("1_nommk")
sfx_death = NodePath("sfx_death")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nommk")

[node name="sfx_death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5hsgn")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
